# apac

./: .gitignore  =0.2.0  AGENTS.md  Apac.csproj  Apac.sln  ApacKiosk.sln  CMakeLists.txt  OPENCODE.md  PROMPT_APAC_Kiosk_Agent.md  Package.swift  Program.cs  README.md  UpgradeLog.htm  agent_prompts.py  clean.ps1  countdown.html  hiring_demo.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
Apac/: Apac.csproj  App.config  Program.cs
Apac.App/: Apac.App.csproj
Apac.App/Browser/: KioskBrowser.cs
Apac.App/Database/: DatabaseManager.cs
Apac.App/Models/: Models.cs
Apac.App/Monitoring/: CameraCapture.cs  IBiometricProvider.cs  KeyLogger.cs  MonitoringOrchestrator.cs  ScreenCapture.cs
Apac.App/Properties/: app.manifest
Apac.App/Security/: HotkeyBlocker.cs  KioskEnforcer.cs  ProcessWatchdog.cs  RegistryProtector.cs
Apac.App/Services/: SessionManager.cs  SiteChecker.cs
Apac/Database/: DatabaseManager.cs  Models.cs
Apac/Forms/: LoginForm.cs  MainForm.cs
Apac/Interfaces/: IBiometricProvider.cs
Apac/Services/: BiometricStub.cs  CameraCapture.cs  KeyLogger.cs  (+2 more)
ApacKiosk/: ApacKiosk.csproj  App.config  Program.cs  app.manifest
Database/: DatabaseService.cs
Forms/: LoginForm.cs
Models/: AllModels.cs
Providers/: BiometricStubProvider.cs  IBiometricProvider.cs
Services/: CameraCapture.cs  KeyLogger.cs  ScreenCapture.cs  SecurityService.cs  SessionManager.cs
Tests/: test_greeting.py
docs/: benchmark-search-issue.md
examples/: main.cpp
include/: task_runner.hpp
src/: task_runner.cpp
(+86 files in other folders)
