[project]
name = "apac"
version = "0.1.0"
description = "Apac project"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-bdd",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["Tests"]
